--- a/src/app/components/reservation-detail/reservation-detail.component.html
+++ b/src/app/components/reservation-detail/reservation-detail.component.html
@@ -53,15 +53,15 @@
     <div class="card " *ngIf="events?.length > 0">
       <img src="{{ events[0].ImageURL }}" height="200px" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title text-center">{{ events[0].Title }}</h5>
-        <p class="card-text text-center">{{ events[0].Total }} ГРН </p>
-        <p class="card-text text-center">(Reservation Name: {{ events[0].Title }})</p>
+        <h5 class="card-title text-center">{{ events[0].Room }}</h5>
+        <p class="card-text text-center">{{ events[0].Total }} грн </p>
+        <p class="card-text text-center">(Назва бронювання: {{ events[0].Title }})</p>
         <p class="card-text text-center"><small>{{ events[0].Start | date :'h:mm a' }} -
             {{ events[0].End | date :'h:mm a dd-MM-y' }}</small> </p>
         <hr>
-        <p class="card-text" style="font-size: 18px;"><small class="text-muted">Description:
+        <p class="card-text" style="font-size: 18px;"><small class="text-muted">Опис:
             {{ events[0].Description }}</small></p>
-        <p class="card-text" style="font-size: 18px;"><small class="text-muted">Address:
+        <p class="card-text" style="font-size: 18px;"><small class="text-muted">Адреса:
             {{ events[0].Address }}</small></p>
       </div>
     </div>
