--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,19 +1,23 @@
 
     
- <app-carousel></app-carousel> 
-    
+ <br>
+ <br>
+ <br> 
+ <br>
+ <br>
+ <br> 
     <div class="row text-center">
 
       <div class="col-lg-3 col-md-6 mb-4" *ngFor="let room of rooms">
         <div class="card h-100" >
           <img class="card-img-top" src="{{ room.ImageURL }}" height="150px" alt="">
           <div class="card-body">
-            <h5 class="card-title">{{ room.Title }}</h5>
-            <p class="card-text"> <b> {{ room.PriceHour }} ГРН / год </b>  </p>
-            <p class="card-text">(Time Schedule: {{ room.StartProgram }}:00 - {{ room.EndProgram }}:00) </p>
+            <h5 class="card-title">{{ room.RehersalRoomName }}</h5>
+            <p class="card-text"> <b> {{ room.PriceHour }} грн/год  </b>  </p>
+            <p class="card-text">(Робочі години: {{ room.StartProgram }}:00 - {{ room.EndProgram }}:00) </p>
           </div>
           <div class="card-footer">
-            <a (click)="redirectToAngularCalendar(room)"  style="color:#fff; cursor: pointer;" class="btn btn-primary">Check Time Slots</a>
+            <a (click)="redirectToAngularCalendar(room)"  style="color:#fff; cursor: pointer;" class="btn btn-primary">Розклад</a>
           </div>
         </div>
       </div>
