--- a/src/app/components/payment/payment.component.html
+++ b/src/app/components/payment/payment.component.html
@@ -3,10 +3,10 @@
             <div class="col-md-6 offset-md-3">
                 <div class="text-center">
                         <img src="{{ room.ImageURL }}" class="img-fluid"> <br>
-                        <span style="font-size:19px;">({{ room.title }})</span> <br>
-                        <span>Reservation Name: {{ reservation.title }}</span> <br>
-                        <span>From {{ reservation.start | date :'h:mm a'}} - To: {{ reservation.end | date :'h:mm a dd-MM-y'}}</span> <br>
-                        <span style="font-size:27px;">Total: <b>{{ reservation.total }}</b> ГРН </span> 
+                        <span style="font-size:19px;">({{ room.RehersalRoomName }})</span> <br>
+                        <span>Назва бронювання: {{ reservation.Title }}</span> <br>
+                        <span>Початок {{ reservation.Start | date :'h:mm a'}} - Кінець: {{ reservation.End | date :'h:mm a dd-MM-y'}}</span> <br>
+                        <span style="font-size:27px;">Сума: <b>{{ (reservation.Total/36.6).toFixed(0) }}</b> usd </span> 
                 </div>
                 <div #paypal style="width: 100%"></div>
             </div>
